--- a/css/css1.html
+++ b/css/css1.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <p>O CSS é uma linguagem de estilo, também conhecida como linguagem de folhas de estilo em cascata, usada para personalizar o visual de um site ou aplicação</p>
+    <p>O CSS é uma linguagem de estilo, também conhecida como linguagem de folhas de estilo em cascata, usada para personalizar o visual de um site ou aplicação.</p>
     
 </body>
 </html>
